<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.unesc.artesmarciaisapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_revenues"
        android:name="com.unesc.artesmarciaisapp.ui.revenue.RevenueFragment"
        android:label="@string/title_revenues"
        tools:layout="@layout/fragment_revenues" />

    <fragment
        android:id="@+id/navigation_configurations"
        android:name="com.unesc.artesmarciaisapp.ui.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />
</navigation>
